[gd_scene load_steps=8 format=3 uid="uid://n73q2fqj4htr"]

[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="1_q7yni"]
[ext_resource type="Script" path="res://Scripts/policyPanel.gd" id="1_vilmr"]
[ext_resource type="PackedScene" uid="uid://bit5bobykh81y" path="res://Scene/prefab/policyItem.tscn" id="2_emouu"]
[ext_resource type="Texture2D" uid="uid://prkfphd2t68q" path="res://Asset/人物/曹豹.png" id="4_ng6dk"]
[ext_resource type="FontFile" uid="uid://j7hxj2vlcx5l" path="res://Asset/YanShiXiaXingKai-2.ttf" id="5_i8b5x"]
[ext_resource type="PackedScene" uid="uid://dpw77mhy77404" path="res://Scene/prefab/lawpoint.tscn" id="6_0wkqx"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4sj3t"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = -1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vilmr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -669.0
offset_top = -411.0
offset_right = 669.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(630.615, 267.699)
theme = ExtResource("1_q7yni")

[node name="orderPanel" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/orderPanel"]
layout_mode = 2

[node name="orderVbox" type="HBoxContainer" parent="PanelContainer/orderPanel/VBoxContainer"]
custom_minimum_size = Vector2(2.05, 450)
layout_mode = 2

[node name="Control_1" parent="PanelContainer/orderPanel/VBoxContainer/orderVbox" instance=ExtResource("2_emouu")]
custom_minimum_size = Vector2(404.79, 0)
layout_mode = 2
detail = "所有军队领袖，严禁擅自动用粮草物资，必须经士族批准后方可动用。一切军需，须经过严格审批备案，不得私自行动。"
context = "上策-限制军需物资法"
img = ExtResource("4_ng6dk")

[node name="Control_2" parent="PanelContainer/orderPanel/VBoxContainer/orderVbox" instance=ExtResource("2_emouu")]
custom_minimum_size = Vector2(404.79, 0)
layout_mode = 2
detail = "军队领袖应向相关报备所需物资，并等待审批后方可调用。一切军需申请，必须经过严格审批程序，禁止私自调度。"
context = "中策-军需审批规定"
img = ExtResource("4_ng6dk")

[node name="Control_3" parent="PanelContainer/orderPanel/VBoxContainer/orderVbox" instance=ExtResource("2_emouu")]
custom_minimum_size = Vector2(374.215, 0)
layout_mode = 2
detail = "凡有违反调度规定者，不分情节轻重，一律拉出军营，以极刑示众。对于私自调用粮草者，立即斩首示众，家属一并流放，绝不宽贷。"
context = "下策-物资调度违规处罚法"
img = ExtResource("4_ng6dk")

[node name="Control2" type="Control" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "详细内容:"
autowrap_mode = 2

[node name="Control" type="Control" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Button" type="Button" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "确认信息"

[node name="Control3" type="Control" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TabBar" type="TabBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -643.0
offset_top = -434.0
offset_right = -214.0
offset_bottom = -379.0
grow_horizontal = 2
grow_vertical = 2
tab_count = 2
tab_0/title = "命令面板"
tab_1/title = "法律法规"

[node name="lawPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control1-1" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -583.0
offset_top = -293.0
offset_right = -425.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2
detail = "建设"
context = "农田开坑"

[node name="Line2D3" type="Line2D" parent="lawPanel/Control1-1"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(564, 273)
points = PackedVector2Array(-401, -240, -293, -309)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D2" type="Line2D" parent="lawPanel/Control1-1"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(563, 273)
points = PackedVector2Array(-401, -241, -298, -183)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control1-2" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -362.0
offset_right = -168.0
offset_bottom = -289.0
grow_horizontal = 2
grow_vertical = 2
context = "兴办教育"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control1-2"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -320, -182)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control1-3" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -238.0
offset_right = -171.0
offset_bottom = -165.0
grow_horizontal = 2
grow_vertical = 2
context = "整治街容"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control1-3"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -308, -302)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control1-4" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -305.0
offset_right = 62.0
offset_bottom = -232.0
grow_horizontal = 2
grow_vertical = 2
context = "重农抑商"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control1-4"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -314, -293)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control1-4"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -323, -187)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control1-5" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 141.0
offset_top = -358.0
offset_right = 299.0
offset_bottom = -285.0
grow_horizontal = 2
grow_vertical = 2
detail = "士族优先"
context = "士族优先"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control1-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -331, -262)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control1-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -333, -194)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D6" type="Line2D" parent="lawPanel/Control1-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -334, -123)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control1-6" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 137.0
offset_top = -252.0
offset_right = 295.0
offset_bottom = -179.0
grow_horizontal = 2
grow_vertical = 2
context = "物价稳定"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control1-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -327, -367)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control1-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -329, -303)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D6" type="Line2D" parent="lawPanel/Control1-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -332, -230)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control1-7" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 360.0
offset_top = -378.0
offset_right = 518.0
offset_bottom = -308.0
grow_horizontal = 2
grow_vertical = 2
context = "屯田制"

[node name="Control1-8" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 359.0
offset_top = -313.0
offset_right = 517.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
context = "府兵制"

[node name="Control1-9" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 358.0
offset_top = -243.0
offset_right = 516.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 2
context = "品级制"

[node name="Control2-1" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -586.0
offset_top = -71.0
offset_right = -428.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
context = "促进商贸"

[node name="Line2D3" type="Line2D" parent="lawPanel/Control2-1"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 274)
points = PackedVector2Array(-401, -241, -293, -278)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D2" type="Line2D" parent="lawPanel/Control2-1"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(569, 276)
points = PackedVector2Array(-401, -241, -298, -183)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control2-2" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -108.0
offset_right = -169.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
context = "诚信经营"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control2-2"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -308, -199)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control2-3" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -13.0
offset_right = -173.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
context = "行业准则"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control2-3"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -308, -302)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control2-4" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -68.0
offset_right = 69.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
context = "禁止军商"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control2-4"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -325, -311)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control2-4"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -323, -187)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control2-5" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 135.0
offset_top = -141.0
offset_right = 293.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
context = "商业税收法"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control2-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -330, -272)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control2-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -328, -192)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D6" type="Line2D" parent="lawPanel/Control2-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -330, -112)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control2-6" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 138.0
offset_top = -19.0
offset_right = 296.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
context = "货币法"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control2-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -332, -393)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control2-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -330, -316)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D6" type="Line2D" parent="lawPanel/Control2-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -330, -232)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control2-7" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 355.0
offset_top = -174.0
offset_right = 513.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
detail = "竞商兼并，或致市场垄断，朝廷须干预，以保市场竞争。"
context = "商业竞争法"

[node name="Control2-8" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 357.0
offset_top = -97.0
offset_right = 515.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
detail = "商货流通，或生纷争，权宜之计，当有施为。"
context = "商品流通法"

[node name="Control2-9" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 357.0
offset_top = -15.0
offset_right = 515.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
detail = "商德不正，损人利己，须重立诚信，以保商业之长久发展。"
context = "商业诚信法"

[node name="Control3-1" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -578.0
offset_top = 148.0
offset_right = -420.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
context = "军纪法"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control3-1"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -304, -293)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D3" type="Line2D" parent="lawPanel/Control3-1"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 274)
points = PackedVector2Array(-401, -241, -298, -183)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control3-2" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = 96.0
offset_right = -173.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
context = "战备法"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control3-2"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -308, -199)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control3-3" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = 197.0
offset_right = -174.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
context = "边防法"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control3-3"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -308, -302)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control3-4" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 134.0
offset_right = 76.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
context = "军事训诂"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control3-4"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -320, -288)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control3-4"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -324, -197)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control3-5" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 147.0
offset_top = 85.0
offset_right = 305.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
detail = "军事装备法"
context = "军事装备法"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control3-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -338, -261)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control3-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -331, -179)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D6" type="Line2D" parent="lawPanel/Control3-5"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -337, -87)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control3-6" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 142.0
offset_top = 176.0
offset_right = 300.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
context = "军事训练法"

[node name="Line2D4" type="Line2D" parent="lawPanel/Control3-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -328, -354)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D5" type="Line2D" parent="lawPanel/Control3-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -332, -271)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Line2D6" type="Line2D" parent="lawPanel/Control3-6"]
material = SubResource("CanvasItemMaterial_4sj3t")
position = Vector2(565, 273)
points = PackedVector2Array(-401, -241, -331, -177)
width = 5.0
default_color = Color(0, 0, 0, 0.109804)
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Control3-7" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 363.0
offset_top = 62.0
offset_right = 521.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
detail = "存在着干部选拔不公平、腐败现象等问题，影响军队的建设和战斗力。"
context = "军事优拔法"

[node name="Control3-8" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 363.0
offset_top = 143.0
offset_right = 521.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
detail = "法度之下，或生疑端，朝廷须审，以抚士心。"
context = "律令兵制"

[node name="Control3-9" parent="lawPanel" instance=ExtResource("6_0wkqx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 360.0
offset_top = 236.0
offset_right = 518.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
detail = "计策施行，或或难合，明智谋略，当得民心。"
context = "国防策略法"

[node name="Label" type="Label" parent="lawPanel"]
layout_mode = 0
offset_left = -604.0
offset_top = -355.0
offset_right = -447.0
offset_bottom = -262.0
theme_override_fonts/font = ExtResource("5_i8b5x")
theme_override_font_sizes/font_size = 37
text = "点数:1"
autowrap_mode = 2

[node name="DetailPanel" type="Panel" parent="lawPanel"]
layout_mode = 0
offset_left = -613.0
offset_top = 316.0
offset_right = 654.0
offset_bottom = 397.0

[node name="Label2" type="Label" parent="lawPanel/DetailPanel"]
layout_mode = 0
offset_left = 4.0
offset_right = 1267.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30
text = "详细：该政策会英雄
"
autowrap_mode = 2

[connection signal="gui_input" from="PanelContainer/orderPanel/VBoxContainer/orderVbox/Control_1" to="." method="_on_control_1_gui_input"]
[connection signal="gui_input" from="PanelContainer/orderPanel/VBoxContainer/orderVbox/Control_2" to="." method="_on_control_2_gui_input"]
[connection signal="gui_input" from="PanelContainer/orderPanel/VBoxContainer/orderVbox/Control_3" to="." method="_on_control_3_gui_input"]
[connection signal="button_down" from="PanelContainer/orderPanel/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="tab_button_pressed" from="TabBar" to="." method="_on_tab_bar_tab_button_pressed"]
[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_bar_tab_changed"]
